# zenith

./: Cargo.toml  README.md  code.jiz
.github/workflows/: rust-clippy.yml  rust.yml
src/: lexer.rs  main.rs
zenith-dev/: Cargo.toml  basics.zen  code.zen
zenith-dev/src/: main.rs
zenith-lexer/: Cargo.toml
zenith-lexer/src/: lexer.rs  lib.rs  types.rs
