[package]
name = "zenith-dev"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
zenith-lexer = { path = "../zenith-lexer" }
